# qradar-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  NOTICE  README.md  auth_context.py  config.example.json  dev_requirements.txt  docker-compose.yml  feature_toggles.json  mcp_settings.example.json  pyproject.toml  requirements.txt  server.py  settings.py  tox.ini
.github/workflows/: ci.yml
client/: qradar_rest_client.py
resources/: __init__.py  aql_fields.py  aql_functions.py  aql_guide.py  aql_query_templates.py  base.py
tests/: __init__.py  conftest.py  local_mcp_connection.py  mcp_connection.py  test_auth_context.py  test_capability_registry.py  test_compatibility.py  test_composite_read_only.py  test_endpoint_registry.py  test_fastmcp_adapter.py  test_read_only_allowlist.py  test_server.py  test_settings.py
tests/client/: __init__.py
tests/resources/: __init__.py  test_aql_fields.py  test_aql_functions.py  test_aql_guide.py  test_aql_query_templates.py  test_base.py
tests/tools/: __init__.py  test_base.py  test_schema.py
tests/utils/: __init__.py  test_audit_logger.py  test_error_handler.py  test_feature_toggle_manager.py  test_mcp_access_auth.py  test_mcp_logger.py  test_redaction.py  test_request_context.py  test_retry.py  test_sanitizer.py  test_structured_logger.py
tools/: __init__.py  base.py  capability_registry.py  compatibility.py  endpoint_registry.py  endpoint_spec.py  fastmcp_adapter.py  schema.py  simple_get_tool.py
tools/analytics/: __init__.py  get_building_block.py  get_custom_action.py  get_rule.py  list_building_blocks.py  list_custom_actions.py  list_rules.py
tools/ariel/: __init__.py  aql_validation.py  cancel_ariel_search.py  create_ariel_search.py  delete_ariel_search.py  delete_saved_search.py  get_ariel_database_columns.py  get_ariel_lookup.py  get_ariel_parser_keywords.py  get_ariel_search_metadata.py  get_ariel_search_results.py  get_ariel_search_status.py  get_saved_search.py  list_ariel_databases.py  list_ariel_functions.py  list_ariel_lookups.py  list_saved_searches.py  validate_aql.py
tools/asset/: list_asset_properties.py  list_assets.py
tools/composite/: __init__.py  get_offense_investigation_context.py  investigate_offense_events.py
tools/config/: __init__.py  list_calculated_properties.py  list_domains.py  list_network_hierarchy.py  list_regex_properties.py  list_user_roles.py  list_users.py
tools/data_classification/: __init__.py  get_qid_record.py  list_dsm_event_mappings.py  list_high_level_categories.py  list_low_level_categories.py  list_qid_records.py
tools/forensics/: __init__.py  get_capture_recovery.py  get_capture_recovery_task.py  get_case.py  get_case_create_task.py  list_capture_recoveries.py  list_capture_recovery_tasks.py  list_cases.py
tools/health_data/: __init__.py  get_qradar_metric.py  get_security_data_count.py  get_system_metric.py  list_qradar_metrics.py  list_system_metrics.py  list_top_offenses.py  list_top_rules.py
tools/help/: __init__.py  discover_qradar_endpoints.py  get_qradar_api_version.py  get_qradar_endpoint.py  get_qradar_resource.py  list_qradar_api_versions.py  list_qradar_resources.py  qradar_doctor.py
tools/log_source/: __init__.py  get_log_source.py  list_log_source_types.py  list_log_sources.py
utils/: __init__.py  audit_logger.py  error_handler.py  feature_toggle_manager.py  formatters.py  mcp_access_auth.py  mcp_logger.py  parameters.py  qradar_auth.py  redaction.py  request_context.py  retry.py  sanitizer.py  structured_logger.py  validators.py
(+158 files in other folders)
